// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/list/demo/basic.md correctly 1`] = `
<div>
  <div
    class="ant-list ant-list-vertical ant-list-bordered ant-list-bordered-dashed"
  >
    <div
      class="ant-list-item"
    >
      <div
        class="ant-list-item-extra-wrap"
      >
        <div
          class="ant-list-item-main"
        >
          <div
            class="ant-list-item-meta"
          >
            <div
              class="ant-list-item-meta-avatar"
            >
              <span
                class="ant-avatar ant-avatar-circle ant-avatar-image"
              >
                <img
                  src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                />
              </span>
            </div>
            <div
              class="ant-list-item-meta-content"
            >
              <h4
                class="ant-list-item-meta-title"
              >
                <a
                  href="#xxx"
                >
                  蚂蚁金服设计平台简介 0
                </a>
              </h4>
              <p
                class="ant-list-item-meta-description"
              >
                一段假象的简介,这是一段比较长的简介,还有很多
              </p>
            </div>
          </div>
          <div
            class="ant-list-item-content"
          >
            段落示意：蚂蚁金服设计平台 design.alipay.com，用最小的工作量，无缝接入蚂蚁金服生态，提供跨越设计与开发的体验解决方案。蚂蚁金服设计平台 design.alipay.com，用最小的工作量，无缝接入蚂蚁金服生态，提供跨越设计与开发的体验解决方案。
          </div>
          <div
            class="ant-list-item-action"
          >
            <span
              class="ant-list-item-action-item"
            >
              <i
                class="anticon anticon-star-o"
              />
              156
              <em
                class="ant-list-item-action-item-split"
              />
            </span>
            <span
              class="ant-list-item-action-item"
            >
              <i
                class="anticon anticon-like-o"
              />
              156
              <em
                class="ant-list-item-action-item-split"
              />
            </span>
            <span
              class="ant-list-item-action-item"
            >
              <i
                class="anticon anticon-message"
              />
              2
            </span>
          </div>
        </div>
        <div
          class="ant-list-item-extra"
        >
          <img
            alt="logo"
            src="https://gw.alipayobjects.com/zos/rmsportal/mqaQswcyDLcXyDKnZfES.png"
            width="272"
          />
        </div>
      </div>
    </div>
    <div
      class="ant-list-item"
    >
      <div
        class="ant-list-item-extra-wrap"
      >
        <div
          class="ant-list-item-main"
        >
          <div
            class="ant-list-item-meta"
          >
            <div
              class="ant-list-item-meta-avatar"
            >
              <span
                class="ant-avatar ant-avatar-circle ant-avatar-image"
              >
                <img
                  src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                />
              </span>
            </div>
            <div
              class="ant-list-item-meta-content"
            >
              <h4
                class="ant-list-item-meta-title"
              >
                <a
                  href="#xxx"
                >
                  蚂蚁金服设计平台简介 1
                </a>
              </h4>
              <p
                class="ant-list-item-meta-description"
              >
                一段假象的简介,这是一段比较长的简介,还有很多
              </p>
            </div>
          </div>
          <div
            class="ant-list-item-content"
          >
            段落示意：蚂蚁金服设计平台 design.alipay.com，用最小的工作量，无缝接入蚂蚁金服生态，提供跨越设计与开发的体验解决方案。蚂蚁金服设计平台 design.alipay.com，用最小的工作量，无缝接入蚂蚁金服生态，提供跨越设计与开发的体验解决方案。
          </div>
          <div
            class="ant-list-item-action"
          >
            <span
              class="ant-list-item-action-item"
            >
              <i
                class="anticon anticon-star-o"
              />
              156
              <em
                class="ant-list-item-action-item-split"
              />
            </span>
            <span
              class="ant-list-item-action-item"
            >
              <i
                class="anticon anticon-like-o"
              />
              156
              <em
                class="ant-list-item-action-item-split"
              />
            </span>
            <span
              class="ant-list-item-action-item"
            >
              <i
                class="anticon anticon-message"
              />
              2
            </span>
          </div>
        </div>
        <div
          class="ant-list-item-extra"
        >
          <img
            alt="logo"
            src="https://gw.alipayobjects.com/zos/rmsportal/mqaQswcyDLcXyDKnZfES.png"
            width="272"
          />
        </div>
      </div>
    </div>
    <div
      class="ant-list-item"
    >
      <div
        class="ant-list-item-extra-wrap"
      >
        <div
          class="ant-list-item-main"
        >
          <div
            class="ant-list-item-meta"
          >
            <div
              class="ant-list-item-meta-avatar"
            >
              <span
                class="ant-avatar ant-avatar-circle ant-avatar-image"
              >
                <img
                  src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                />
              </span>
            </div>
            <div
              class="ant-list-item-meta-content"
            >
              <h4
                class="ant-list-item-meta-title"
              >
                <a
                  href="#xxx"
                >
                  蚂蚁金服设计平台简介 2
                </a>
              </h4>
              <p
                class="ant-list-item-meta-description"
              >
                一段假象的简介,这是一段比较长的简介,还有很多
              </p>
            </div>
          </div>
          <div
            class="ant-list-item-content"
          >
            段落示意：蚂蚁金服设计平台 design.alipay.com，用最小的工作量，无缝接入蚂蚁金服生态，提供跨越设计与开发的体验解决方案。蚂蚁金服设计平台 design.alipay.com，用最小的工作量，无缝接入蚂蚁金服生态，提供跨越设计与开发的体验解决方案。
          </div>
          <div
            class="ant-list-item-action"
          >
            <span
              class="ant-list-item-action-item"
            >
              <i
                class="anticon anticon-star-o"
              />
              156
              <em
                class="ant-list-item-action-item-split"
              />
            </span>
            <span
              class="ant-list-item-action-item"
            >
              <i
                class="anticon anticon-like-o"
              />
              156
              <em
                class="ant-list-item-action-item-split"
              />
            </span>
            <span
              class="ant-list-item-action-item"
            >
              <i
                class="anticon anticon-message"
              />
              2
            </span>
          </div>
        </div>
        <div
          class="ant-list-item-extra"
        >
          <img
            alt="logo"
            src="https://gw.alipayobjects.com/zos/rmsportal/mqaQswcyDLcXyDKnZfES.png"
            width="272"
          />
        </div>
      </div>
    </div>
    <div
      class="ant-list-item"
    >
      <div
        class="ant-list-item-extra-wrap"
      >
        <div
          class="ant-list-item-main"
        >
          <div
            class="ant-list-item-meta"
          >
            <div
              class="ant-list-item-meta-avatar"
            >
              <span
                class="ant-avatar ant-avatar-circle ant-avatar-image"
              >
                <img
                  src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                />
              </span>
            </div>
            <div
              class="ant-list-item-meta-content"
            >
              <h4
                class="ant-list-item-meta-title"
              >
                <a
                  href="#xxx"
                >
                  蚂蚁金服设计平台简介 3
                </a>
              </h4>
              <p
                class="ant-list-item-meta-description"
              >
                一段假象的简介,这是一段比较长的简介,还有很多
              </p>
            </div>
          </div>
          <div
            class="ant-list-item-content"
          >
            段落示意：蚂蚁金服设计平台 design.alipay.com，用最小的工作量，无缝接入蚂蚁金服生态，提供跨越设计与开发的体验解决方案。蚂蚁金服设计平台 design.alipay.com，用最小的工作量，无缝接入蚂蚁金服生态，提供跨越设计与开发的体验解决方案。
          </div>
          <div
            class="ant-list-item-action"
          >
            <span
              class="ant-list-item-action-item"
            >
              <i
                class="anticon anticon-star-o"
              />
              156
              <em
                class="ant-list-item-action-item-split"
              />
            </span>
            <span
              class="ant-list-item-action-item"
            >
              <i
                class="anticon anticon-like-o"
              />
              156
              <em
                class="ant-list-item-action-item-split"
              />
            </span>
            <span
              class="ant-list-item-action-item"
            >
              <i
                class="anticon anticon-message"
              />
              2
            </span>
          </div>
        </div>
        <div
          class="ant-list-item-extra"
        >
          <img
            alt="logo"
            src="https://gw.alipayobjects.com/zos/rmsportal/mqaQswcyDLcXyDKnZfES.png"
            width="272"
          />
        </div>
      </div>
    </div>
    <div
      class="ant-list-item"
    >
      <div
        class="ant-list-item-extra-wrap"
      >
        <div
          class="ant-list-item-main"
        >
          <div
            class="ant-list-item-meta"
          >
            <div
              class="ant-list-item-meta-avatar"
            >
              <span
                class="ant-avatar ant-avatar-circle ant-avatar-image"
              >
                <img
                  src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                />
              </span>
            </div>
            <div
              class="ant-list-item-meta-content"
            >
              <h4
                class="ant-list-item-meta-title"
              >
                <a
                  href="#xxx"
                >
                  蚂蚁金服设计平台简介 4
                </a>
              </h4>
              <p
                class="ant-list-item-meta-description"
              >
                一段假象的简介,这是一段比较长的简介,还有很多
              </p>
            </div>
          </div>
          <div
            class="ant-list-item-content"
          >
            段落示意：蚂蚁金服设计平台 design.alipay.com，用最小的工作量，无缝接入蚂蚁金服生态，提供跨越设计与开发的体验解决方案。蚂蚁金服设计平台 design.alipay.com，用最小的工作量，无缝接入蚂蚁金服生态，提供跨越设计与开发的体验解决方案。
          </div>
          <div
            class="ant-list-item-action"
          >
            <span
              class="ant-list-item-action-item"
            >
              <i
                class="anticon anticon-star-o"
              />
              156
              <em
                class="ant-list-item-action-item-split"
              />
            </span>
            <span
              class="ant-list-item-action-item"
            >
              <i
                class="anticon anticon-like-o"
              />
              156
              <em
                class="ant-list-item-action-item-split"
              />
            </span>
            <span
              class="ant-list-item-action-item"
            >
              <i
                class="anticon anticon-message"
              />
              2
            </span>
          </div>
        </div>
        <div
          class="ant-list-item-extra"
        >
          <img
            alt="logo"
            src="https://gw.alipayobjects.com/zos/rmsportal/mqaQswcyDLcXyDKnZfES.png"
            width="272"
          />
        </div>
      </div>
    </div>
    <div
      class="ant-list-item"
    >
      <div
        class="ant-list-item-extra-wrap"
      >
        <div
          class="ant-list-item-main"
        >
          <div
            class="ant-list-item-meta"
          >
            <div
              class="ant-list-item-meta-avatar"
            >
              <span
                class="ant-avatar ant-avatar-circle ant-avatar-image"
              >
                <img
                  src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                />
              </span>
            </div>
            <div
              class="ant-list-item-meta-content"
            >
              <h4
                class="ant-list-item-meta-title"
              >
                <a
                  href="#xxx"
                >
                  蚂蚁金服设计平台简介 5
                </a>
              </h4>
              <p
                class="ant-list-item-meta-description"
              >
                一段假象的简介,这是一段比较长的简介,还有很多
              </p>
            </div>
          </div>
          <div
            class="ant-list-item-content"
          >
            段落示意：蚂蚁金服设计平台 design.alipay.com，用最小的工作量，无缝接入蚂蚁金服生态，提供跨越设计与开发的体验解决方案。蚂蚁金服设计平台 design.alipay.com，用最小的工作量，无缝接入蚂蚁金服生态，提供跨越设计与开发的体验解决方案。
          </div>
          <div
            class="ant-list-item-action"
          >
            <span
              class="ant-list-item-action-item"
            >
              <i
                class="anticon anticon-star-o"
              />
              156
              <em
                class="ant-list-item-action-item-split"
              />
            </span>
            <span
              class="ant-list-item-action-item"
            >
              <i
                class="anticon anticon-like-o"
              />
              156
              <em
                class="ant-list-item-action-item-split"
              />
            </span>
            <span
              class="ant-list-item-action-item"
            >
              <i
                class="anticon anticon-message"
              />
              2
            </span>
          </div>
        </div>
        <div
          class="ant-list-item-extra"
        >
          <img
            alt="logo"
            src="https://gw.alipayobjects.com/zos/rmsportal/mqaQswcyDLcXyDKnZfES.png"
            width="272"
          />
        </div>
      </div>
    </div>
    <div
      class="ant-list-item"
    >
      <div
        class="ant-list-item-extra-wrap"
      >
        <div
          class="ant-list-item-main"
        >
          <div
            class="ant-list-item-meta"
          >
            <div
              class="ant-list-item-meta-avatar"
            >
              <span
                class="ant-avatar ant-avatar-circle ant-avatar-image"
              >
                <img
                  src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                />
              </span>
            </div>
            <div
              class="ant-list-item-meta-content"
            >
              <h4
                class="ant-list-item-meta-title"
              >
                <a
                  href="#xxx"
                >
                  蚂蚁金服设计平台简介 6
                </a>
              </h4>
              <p
                class="ant-list-item-meta-description"
              >
                一段假象的简介,这是一段比较长的简介,还有很多
              </p>
            </div>
          </div>
          <div
            class="ant-list-item-content"
          >
            段落示意：蚂蚁金服设计平台 design.alipay.com，用最小的工作量，无缝接入蚂蚁金服生态，提供跨越设计与开发的体验解决方案。蚂蚁金服设计平台 design.alipay.com，用最小的工作量，无缝接入蚂蚁金服生态，提供跨越设计与开发的体验解决方案。
          </div>
          <div
            class="ant-list-item-action"
          >
            <span
              class="ant-list-item-action-item"
            >
              <i
                class="anticon anticon-star-o"
              />
              156
              <em
                class="ant-list-item-action-item-split"
              />
            </span>
            <span
              class="ant-list-item-action-item"
            >
              <i
                class="anticon anticon-like-o"
              />
              156
              <em
                class="ant-list-item-action-item-split"
              />
            </span>
            <span
              class="ant-list-item-action-item"
            >
              <i
                class="anticon anticon-message"
              />
              2
            </span>
          </div>
        </div>
        <div
          class="ant-list-item-extra"
        >
          <img
            alt="logo"
            src="https://gw.alipayobjects.com/zos/rmsportal/mqaQswcyDLcXyDKnZfES.png"
            width="272"
          />
        </div>
      </div>
    </div>
    <div
      class="ant-list-item"
    >
      <div
        class="ant-list-item-extra-wrap"
      >
        <div
          class="ant-list-item-main"
        >
          <div
            class="ant-list-item-meta"
          >
            <div
              class="ant-list-item-meta-avatar"
            >
              <span
                class="ant-avatar ant-avatar-circle ant-avatar-image"
              >
                <img
                  src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                />
              </span>
            </div>
            <div
              class="ant-list-item-meta-content"
            >
              <h4
                class="ant-list-item-meta-title"
              >
                <a
                  href="#xxx"
                >
                  蚂蚁金服设计平台简介 7
                </a>
              </h4>
              <p
                class="ant-list-item-meta-description"
              >
                一段假象的简介,这是一段比较长的简介,还有很多
              </p>
            </div>
          </div>
          <div
            class="ant-list-item-content"
          >
            段落示意：蚂蚁金服设计平台 design.alipay.com，用最小的工作量，无缝接入蚂蚁金服生态，提供跨越设计与开发的体验解决方案。蚂蚁金服设计平台 design.alipay.com，用最小的工作量，无缝接入蚂蚁金服生态，提供跨越设计与开发的体验解决方案。
          </div>
          <div
            class="ant-list-item-action"
          >
            <span
              class="ant-list-item-action-item"
            >
              <i
                class="anticon anticon-star-o"
              />
              156
              <em
                class="ant-list-item-action-item-split"
              />
            </span>
            <span
              class="ant-list-item-action-item"
            >
              <i
                class="anticon anticon-like-o"
              />
              156
              <em
                class="ant-list-item-action-item-split"
              />
            </span>
            <span
              class="ant-list-item-action-item"
            >
              <i
                class="anticon anticon-message"
              />
              2
            </span>
          </div>
        </div>
        <div
          class="ant-list-item-extra"
        >
          <img
            alt="logo"
            src="https://gw.alipayobjects.com/zos/rmsportal/mqaQswcyDLcXyDKnZfES.png"
            width="272"
          />
        </div>
      </div>
    </div>
    <div
      class="ant-list-item"
    >
      <div
        class="ant-list-item-extra-wrap"
      >
        <div
          class="ant-list-item-main"
        >
          <div
            class="ant-list-item-meta"
          >
            <div
              class="ant-list-item-meta-avatar"
            >
              <span
                class="ant-avatar ant-avatar-circle ant-avatar-image"
              >
                <img
                  src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                />
              </span>
            </div>
            <div
              class="ant-list-item-meta-content"
            >
              <h4
                class="ant-list-item-meta-title"
              >
                <a
                  href="#xxx"
                >
                  蚂蚁金服设计平台简介 8
                </a>
              </h4>
              <p
                class="ant-list-item-meta-description"
              >
                一段假象的简介,这是一段比较长的简介,还有很多
              </p>
            </div>
          </div>
          <div
            class="ant-list-item-content"
          >
            段落示意：蚂蚁金服设计平台 design.alipay.com，用最小的工作量，无缝接入蚂蚁金服生态，提供跨越设计与开发的体验解决方案。蚂蚁金服设计平台 design.alipay.com，用最小的工作量，无缝接入蚂蚁金服生态，提供跨越设计与开发的体验解决方案。
          </div>
          <div
            class="ant-list-item-action"
          >
            <span
              class="ant-list-item-action-item"
            >
              <i
                class="anticon anticon-star-o"
              />
              156
              <em
                class="ant-list-item-action-item-split"
              />
            </span>
            <span
              class="ant-list-item-action-item"
            >
              <i
                class="anticon anticon-like-o"
              />
              156
              <em
                class="ant-list-item-action-item-split"
              />
            </span>
            <span
              class="ant-list-item-action-item"
            >
              <i
                class="anticon anticon-message"
              />
              2
            </span>
          </div>
        </div>
        <div
          class="ant-list-item-extra"
        >
          <img
            alt="logo"
            src="https://gw.alipayobjects.com/zos/rmsportal/mqaQswcyDLcXyDKnZfES.png"
            width="272"
          />
        </div>
      </div>
    </div>
    <div
      class="ant-list-item"
    >
      <div
        class="ant-list-item-extra-wrap"
      >
        <div
          class="ant-list-item-main"
        >
          <div
            class="ant-list-item-meta"
          >
            <div
              class="ant-list-item-meta-avatar"
            >
              <span
                class="ant-avatar ant-avatar-circle ant-avatar-image"
              >
                <img
                  src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                />
              </span>
            </div>
            <div
              class="ant-list-item-meta-content"
            >
              <h4
                class="ant-list-item-meta-title"
              >
                <a
                  href="#xxx"
                >
                  蚂蚁金服设计平台简介 9
                </a>
              </h4>
              <p
                class="ant-list-item-meta-description"
              >
                一段假象的简介,这是一段比较长的简介,还有很多
              </p>
            </div>
          </div>
          <div
            class="ant-list-item-content"
          >
            段落示意：蚂蚁金服设计平台 design.alipay.com，用最小的工作量，无缝接入蚂蚁金服生态，提供跨越设计与开发的体验解决方案。蚂蚁金服设计平台 design.alipay.com，用最小的工作量，无缝接入蚂蚁金服生态，提供跨越设计与开发的体验解决方案。
          </div>
          <div
            class="ant-list-item-action"
          >
            <span
              class="ant-list-item-action-item"
            >
              <i
                class="anticon anticon-star-o"
              />
              156
              <em
                class="ant-list-item-action-item-split"
              />
            </span>
            <span
              class="ant-list-item-action-item"
            >
              <i
                class="anticon anticon-like-o"
              />
              156
              <em
                class="ant-list-item-action-item-split"
              />
            </span>
            <span
              class="ant-list-item-action-item"
            >
              <i
                class="anticon anticon-message"
              />
              2
            </span>
          </div>
        </div>
        <div
          class="ant-list-item-extra"
        >
          <img
            alt="logo"
            src="https://gw.alipayobjects.com/zos/rmsportal/mqaQswcyDLcXyDKnZfES.png"
            width="272"
          />
        </div>
      </div>
    </div>
    <div
      class="ant-list-pagination"
    >
      <ul
        class="ant-pagination "
        unselectable="unselectable"
      >
        <li
          aria-disabled="true"
          class="ant-pagination-disabled ant-pagination-prev"
          tabindex="0"
          title="上一页"
        >
          <a />
        </li>
        <li
          class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
          tabindex="0"
          title="1"
        >
          <a>
            1
          </a>
        </li>
        <li
          aria-disabled="true"
          class="ant-pagination-disabled ant-pagination-next"
          tabindex="0"
          title="下一页"
        >
          <a />
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`renders ./components/list/demo/horizontal.md correctly 1`] = `
<div>
  <div
    class="ant-list ant-list-bordered"
  >
    <div
      class="ant-list-item"
    >
      <div
        class="ant-list-item-meta"
      >
        <div
          class="ant-list-item-meta-avatar"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-image"
          >
            <img
              src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
            />
          </span>
        </div>
        <div
          class="ant-list-item-meta-content"
        >
          <h4
            class="ant-list-item-meta-title"
          >
            <a
              href="#xxx"
            >
              蚂蚁金服设计平台简介 0
            </a>
          </h4>
          <p
            class="ant-list-item-meta-description"
          >
            一段假象的简介,这是一段比较长的简介,还有很多
          </p>
        </div>
      </div>
      <div
        class="ant-list-item-content"
      >
        没什么实际内容
      </div>
      <div
        class="ant-list-item-action"
      >
        <a>
          编辑
        </a>
         | 
        <a>
          更多
        </a>
      </div>
    </div>
    <div
      class="ant-list-item"
    >
      <div
        class="ant-list-item-meta"
      >
        <div
          class="ant-list-item-meta-avatar"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-image"
          >
            <img
              src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
            />
          </span>
        </div>
        <div
          class="ant-list-item-meta-content"
        >
          <h4
            class="ant-list-item-meta-title"
          >
            <a
              href="#xxx"
            >
              蚂蚁金服设计平台简介 1
            </a>
          </h4>
          <p
            class="ant-list-item-meta-description"
          >
            一段假象的简介,这是一段比较长的简介,还有很多
          </p>
        </div>
      </div>
      <div
        class="ant-list-item-content"
      >
        没什么实际内容
      </div>
      <div
        class="ant-list-item-action"
      >
        <a>
          编辑
        </a>
         | 
        <a>
          更多
        </a>
      </div>
    </div>
    <div
      class="ant-list-item"
    >
      <div
        class="ant-list-item-meta"
      >
        <div
          class="ant-list-item-meta-avatar"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-image"
          >
            <img
              src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
            />
          </span>
        </div>
        <div
          class="ant-list-item-meta-content"
        >
          <h4
            class="ant-list-item-meta-title"
          >
            <a
              href="#xxx"
            >
              蚂蚁金服设计平台简介 2
            </a>
          </h4>
          <p
            class="ant-list-item-meta-description"
          >
            一段假象的简介,这是一段比较长的简介,还有很多
          </p>
        </div>
      </div>
      <div
        class="ant-list-item-content"
      >
        没什么实际内容
      </div>
      <div
        class="ant-list-item-action"
      >
        <a>
          编辑
        </a>
         | 
        <a>
          更多
        </a>
      </div>
    </div>
    <div
      class="ant-list-item"
    >
      <div
        class="ant-list-item-meta"
      >
        <div
          class="ant-list-item-meta-avatar"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-image"
          >
            <img
              src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
            />
          </span>
        </div>
        <div
          class="ant-list-item-meta-content"
        >
          <h4
            class="ant-list-item-meta-title"
          >
            <a
              href="#xxx"
            >
              蚂蚁金服设计平台简介 3
            </a>
          </h4>
          <p
            class="ant-list-item-meta-description"
          >
            一段假象的简介,这是一段比较长的简介,还有很多
          </p>
        </div>
      </div>
      <div
        class="ant-list-item-content"
      >
        没什么实际内容
      </div>
      <div
        class="ant-list-item-action"
      >
        <a>
          编辑
        </a>
         | 
        <a>
          更多
        </a>
      </div>
    </div>
    <div
      class="ant-list-item"
    >
      <div
        class="ant-list-item-meta"
      >
        <div
          class="ant-list-item-meta-avatar"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-image"
          >
            <img
              src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
            />
          </span>
        </div>
        <div
          class="ant-list-item-meta-content"
        >
          <h4
            class="ant-list-item-meta-title"
          >
            <a
              href="#xxx"
            >
              蚂蚁金服设计平台简介 4
            </a>
          </h4>
          <p
            class="ant-list-item-meta-description"
          >
            一段假象的简介,这是一段比较长的简介,还有很多
          </p>
        </div>
      </div>
      <div
        class="ant-list-item-content"
      >
        没什么实际内容
      </div>
      <div
        class="ant-list-item-action"
      >
        <a>
          编辑
        </a>
         | 
        <a>
          更多
        </a>
      </div>
    </div>
    <div
      class="ant-list-item"
    >
      <div
        class="ant-list-item-meta"
      >
        <div
          class="ant-list-item-meta-avatar"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-image"
          >
            <img
              src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
            />
          </span>
        </div>
        <div
          class="ant-list-item-meta-content"
        >
          <h4
            class="ant-list-item-meta-title"
          >
            <a
              href="#xxx"
            >
              蚂蚁金服设计平台简介 5
            </a>
          </h4>
          <p
            class="ant-list-item-meta-description"
          >
            一段假象的简介,这是一段比较长的简介,还有很多
          </p>
        </div>
      </div>
      <div
        class="ant-list-item-content"
      >
        没什么实际内容
      </div>
      <div
        class="ant-list-item-action"
      >
        <a>
          编辑
        </a>
         | 
        <a>
          更多
        </a>
      </div>
    </div>
    <div
      class="ant-list-item"
    >
      <div
        class="ant-list-item-meta"
      >
        <div
          class="ant-list-item-meta-avatar"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-image"
          >
            <img
              src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
            />
          </span>
        </div>
        <div
          class="ant-list-item-meta-content"
        >
          <h4
            class="ant-list-item-meta-title"
          >
            <a
              href="#xxx"
            >
              蚂蚁金服设计平台简介 6
            </a>
          </h4>
          <p
            class="ant-list-item-meta-description"
          >
            一段假象的简介,这是一段比较长的简介,还有很多
          </p>
        </div>
      </div>
      <div
        class="ant-list-item-content"
      >
        没什么实际内容
      </div>
      <div
        class="ant-list-item-action"
      >
        <a>
          编辑
        </a>
         | 
        <a>
          更多
        </a>
      </div>
    </div>
    <div
      class="ant-list-item"
    >
      <div
        class="ant-list-item-meta"
      >
        <div
          class="ant-list-item-meta-avatar"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-image"
          >
            <img
              src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
            />
          </span>
        </div>
        <div
          class="ant-list-item-meta-content"
        >
          <h4
            class="ant-list-item-meta-title"
          >
            <a
              href="#xxx"
            >
              蚂蚁金服设计平台简介 7
            </a>
          </h4>
          <p
            class="ant-list-item-meta-description"
          >
            一段假象的简介,这是一段比较长的简介,还有很多
          </p>
        </div>
      </div>
      <div
        class="ant-list-item-content"
      >
        没什么实际内容
      </div>
      <div
        class="ant-list-item-action"
      >
        <a>
          编辑
        </a>
         | 
        <a>
          更多
        </a>
      </div>
    </div>
    <div
      class="ant-list-item"
    >
      <div
        class="ant-list-item-meta"
      >
        <div
          class="ant-list-item-meta-avatar"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-image"
          >
            <img
              src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
            />
          </span>
        </div>
        <div
          class="ant-list-item-meta-content"
        >
          <h4
            class="ant-list-item-meta-title"
          >
            <a
              href="#xxx"
            >
              蚂蚁金服设计平台简介 8
            </a>
          </h4>
          <p
            class="ant-list-item-meta-description"
          >
            一段假象的简介,这是一段比较长的简介,还有很多
          </p>
        </div>
      </div>
      <div
        class="ant-list-item-content"
      >
        没什么实际内容
      </div>
      <div
        class="ant-list-item-action"
      >
        <a>
          编辑
        </a>
         | 
        <a>
          更多
        </a>
      </div>
    </div>
    <div
      class="ant-list-item"
    >
      <div
        class="ant-list-item-meta"
      >
        <div
          class="ant-list-item-meta-avatar"
        >
          <span
            class="ant-avatar ant-avatar-circle ant-avatar-image"
          >
            <img
              src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
            />
          </span>
        </div>
        <div
          class="ant-list-item-meta-content"
        >
          <h4
            class="ant-list-item-meta-title"
          >
            <a
              href="#xxx"
            >
              蚂蚁金服设计平台简介 9
            </a>
          </h4>
          <p
            class="ant-list-item-meta-description"
          >
            一段假象的简介,这是一段比较长的简介,还有很多
          </p>
        </div>
      </div>
      <div
        class="ant-list-item-content"
      >
        没什么实际内容
      </div>
      <div
        class="ant-list-item-action"
      >
        <a>
          编辑
        </a>
         | 
        <a>
          更多
        </a>
      </div>
    </div>
    <div
      class="ant-list-more"
    >
      <button
        class="ant-btn"
        type="button"
      >
        <span>
          加载更多...
        </span>
      </button>
    </div>
  </div>
</div>
`;
